--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "css-loader": "^0.28.11",
     "docker-cli-js": "^2.2.0",
     "electron": "^2.0.0",
     "install": "^0.11.0",
     "npm": "^6.0.0",
     "papaparse": "^4.4.0",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "style-loader": "^0.21.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
