--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "docker-cli-js": "^2.2.0",
     "electron": "^2.0.0",
     "install": "^0.11.0",
+    "nodemon": "^1.17.4",
     "npm": "^6.0.0",
     "papaparse": "^4.4.0",
     "react": "^16.3.2",
