--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "docker-cli-js": "^2.2.0",
     "electron": "^2.0.1",
     "electron-json-storage": "^4.1.0",
+    "express": "^4.16.3",
     "install": "^0.11.0",
     "nodemon": "^1.17.4",
     "npm": "^6.0.0",
