--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch",
-    "electron": "electron ."
+    "electron": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "postinstall": "electron-builder install-app-deps"
   },
   "author": "Haaris-S, jmangz, RichWalker3, pkassar",
   "license": "ISC",
@@ -15,7 +18,6 @@
     "body-parser": "^1.18.2",
     "css-loader": "^0.28.11",
     "docker-cli-js": "^2.2.0",
-    "electron": "^2.0.1",
     "electron-json-storage": "^4.1.0",
     "express": "^4.16.3",
     "install": "^0.11.0",
@@ -32,8 +34,16 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "electron": "^2.0.1",
+    "electron-builder": "^20.13.4",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2",
     "webpack-dev-server": "^3.1.4"
+  },
+  "build": {
+    "appId": "your.id",
+    "mac": {
+      "category": "your.app.category.type"
+    }
   }
 }
