installed prop-types

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^1.17.4",
     "npm": "^6.0.0",
     "papaparse": "^4.4.0",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-key-index": "^0.1.1",
