--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "spindocker",
-  "version": "1.0.0",
+  "name": "spin",
+  "version": "1.2.1",
   "description": "",
   "main": "main.js",
   "scripts": {
